--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/ajustes_de_jogo.json
+Assets/ajustes_de_jogo.json.meta
+Assets/placar.json
+Assets/placar.json.meta
