--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,8 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Local scoreboard and settings
 Assets/ajustes_de_jogo.json
 Assets/ajustes_de_jogo.json.meta
 Assets/placar.json
