--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,6 @@ Assets/Placar.json
 Assets/Placar.json.meta
 Assets/PreferenciasDoUsuario.json
 Assets/PreferenciasDoUsuario.json.meta
+
+# Fix language percentages
+*/*/Campo?Minado/*.vb linguist-generated
